--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,67 @@
 #root {
-  max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+body {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+body h2 {
+  background: black;
+  color: orange;
+  border-radius: 1rem;
+  width: 100%;
+
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.cookie-clicker {
+  width: 100%;
+  max-width: 600px;
+  padding: 2rem;
+  background-image: linear-gradient(tan, black);
+  border-radius: 1rem;
 }
 
-.card {
-  padding: 2em;
+.cookie-clicker p {
+  color: white;
 }
 
-.read-the-docs {
-  color: #888;
+.cookie-button {
+  background-color: transparent;
+  border: none;
+  border-radius: 50%;
+  padding: 0;
+  cursor: pointer;
+}
+
+.cookie-button img{
+  width: 50px;
+}
+
+.cat-facts {
+  width: 100%;
+  max-width: 600px;
+  display: flex; 
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  border-radius: 1rem;
+  background-image: linear-gradient(tan, black);
+  padding: 2rem;
+}
+
+.cat-facts img {
+  width: 250px;
+  border-radius: 1rem;
+}
+
+.cat-facts p {
+  color: white;
 }
