--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,25 @@
 #root {
-  margin: 0 auto;
-  padding: 2rem;
+  margin: 0;
+  padding: 0;
   text-align: center;
-}
-
-body {
+  color: white;
   width: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
+}
+
+body {
+  min-height: 150vh;
+  padding: 0;
+  margin: 0;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  background: linear-gradient(to top right, rgb(125, 62, 39), black, rgb(125, 62, 39));
 }
 
 body h2 {
@@ -17,7 +27,6 @@ body h2 {
   color: orange;
   border-radius: 1rem;
   width: 100%;
-
 }
 
 .cookie-clicker {
@@ -25,7 +34,11 @@ body h2 {
   max-width: 600px;
   padding: 2rem;
   background-image: linear-gradient(tan, black);
-  border-radius: 1rem;
+  border-radius: 0.5rem;
+}
+
+.cookie-clicker img {
+  width: 100px;
 }
 
 .cookie-clicker p {
@@ -40,6 +53,10 @@ body h2 {
   cursor: pointer;
 }
 
+.cookie-button:active {
+  transform: translate(-50px, -10px);
+}
+
 .cookie-button img{
   width: 50px;
 }
@@ -52,16 +69,61 @@ body h2 {
   justify-content: center;
   align-items: center;
   gap: 1rem;
-  border-radius: 1rem;
+  border-radius: 0.5rem;
   background-image: linear-gradient(tan, black);
   padding: 2rem;
 }
 
 .cat-facts img {
   width: 250px;
-  border-radius: 1rem;
+  border-radius: 0.5rem;
+}
+
+.cat-facts button {
+  border-radius: 0.5rem;
+  background-color: rgb(81, 43, 0);
+  color: rgb(255, 192, 98);
+  padding: 0.5rem;
+  cursor: pointer;
+}
+.cat-facts button:hover {
+  background-color:rgb(129, 69, 0);
 }
 
 .cat-facts p {
-  color: white;
+  background-color: rgba(0,0,0,0.5);
+  border-radius: 0.5rem;
+  padding: 1rem;
+}
+
+.cat-facts p span {
+  color: gold;
+  font-size: 1.2rem;
+}
+
+.user-component {
+  width: 100%;
+  max-width: 1280px;
+  display: flex; 
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  border-radius: 0.5rem;
+  background-image: linear-gradient(tan, black);
+  padding: 2rem;
+}
+
+.user-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+}
+
+.user-card {
+  text-align: start;
+  list-style: none;
+  background: grey;
+  padding: 2rem;
+  border-radius: 0.5rem;
 }
